# ngx_ziti_module

./: .gitignore  CMakeLists.txt  README.md  config  ngx_ziti_module.c  ngx_ziti_module.h
.github/workflows/: main.yml
configs/: nginx.conf
